CAI-5 | feat: global exception impl